name: thorn
version: 0.1
synopsis: Template Haskell Library
description: Template Haskell Library
license: GPL-2
license-file: LICENSE
author: Yusuke Matsushita
maintainer: y.skm24t@gmail.com
category: Data
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules: Data.Thorn
    other-extensions: TemplateHaskell, ViewPatterns
    build-depends: base >= 4 && < 5, template-haskell < 3, mtl < 3
    default-language: Haskell2010
